--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -93,70 +93,76 @@
   
   checkLoginState();
 </script>
-
-<h2>Sample Client 2</h2>
-
-<% if @user.nil? %>
-	<p>
-		<a href='/login'>
-			Login Using Acceptto
-		</a>
-	</p>
-	
-<% else %>
-	<p>
-		<h3>Acceptto Login Status:</h3>
-		Current Logged In User: <%= @user %> | <a href="/logout?service=<%= Rails.application.config.host_url %>">Sign Out</a>
-		<br />
-		<!--User Extra Attributes: <%= request.session['cas']['extra_attributes'] %>-->
-	</p>
-	
-<% end %>
-
-<hr />
-
-<p>
-	<h3>Facebook Login Status:</h3> 
-	<span id="status">...</span>
-	<span id="facebook_logout" style='display:none;'>
-		<a onclick="javascript:logout()" href="#">
-			| Facebook Logout
-		</a>
+<div class="container" style="margin-top:80px">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h2 style="text-align:center">
+        Client2 Business Website
+        <br />
+      </h2>
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          Acceptto Login Status
+        </div>
+        <div class="panel-body">
+          <% if @user.nil? %>
+              <a href='/login' class="btn btn-success btn-group-lg">
+                Login Using Acceptto
+              </a>
+          <% else %>
+             <div style="color:green"> Current Logged In User: <%= @user %> | <a href="/logout?service=<%= Rails.application.config.host_url %>">Sign Out</a>
+              <br />
+              <!--User Extra Attributes: <%= request.session['cas']['extra_attributes'] %>-->
+             </div>
+            <% end %>
+         </div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          Facebook Login Status
+        </div>
+        <div class="panel-body">
+          <span id="status">...</span>
+          <span id="facebook_logout" style='display:none;'>
+		   <a onclick="javascript:logout()" href="#">
+            | Facebook Logout
+           </a>
+	      </span>
+          <div id="fbLogin" style='display:none;'>
+            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+            </fb:login-button>
+          </div>
+      </div>
+    </div>
+      <div class="panel panel-danger">
+        <div class="panel-heading">
+          Google Login Status
+        </div>
+        <div class="panel-body">
+          <span id="google_status">
 	</span>
-</p>
-
-<div id="fbLogin" style='display:none;'>
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-		</fb:login-button>
+          <div id='google_signed_in' style='display:none'>
+            <table>
+              <tr>
+                <td>
+                  <span id='pic'></span>
+                </td>
+                <td>
+                  <span id='name'></span>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <br />
+          <br />
+          <button id="signinButton" style='display:none;'>Sign in with Google</button>
+          <button id="signoutButton" onclick='javascript:signOut();
+          ' style='display:none'>Sign out of Google</button>
+        </div>
+      </div>
+  </div>
 </div>
-
-<hr />
-
-<p>
-	<h3>Google Login Status:</h3> 
-	<span id="google_status">
-	</span>
-	<div id='google_signed_in' style='display:none'>
-		<table>
-			<tr>
-				<td>
-					<span id='pic'></span>
-				</td>
-				<td>
-					<span id='name'></span>
-				</td>
-			</tr>
-		</table>
-	</div>
-	<br />
-	<br />
-	<button id="signinButton" style='display:none;'>Sign in with Google</button>
-	<button id="signoutButton" onclick='javascript:signOut();
-' style='display:none'>Sign out of Google</button>
-<br />
-<br />
-</p>
-
+</div>
 <script src="https://apis.google.com/js/client:plusone.js?onload=render"></script>
 
 <script type="text/javascript">
