--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -93,13 +93,30 @@
   
   checkLoginState();
 </script>
+<header class="navbar navbar-static-top navbar-default" role="banner">
+  <div class="container">
+    <a href="../" class="navbar-brand">
+      Client 2 Business Website
+    </a>
+  </div>
+</header>
 <div class="container" style="margin-top:80px">
   <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <h2 style="text-align:center">
-        Client2 Business Website
-        <br />
-      </h2>
+    <div class="col-md-2"></div>
+    <div class="col-md-4">
+    <div class="login-container">
+      <div id="output"></div>
+      <div class="avatar"></div>
+      <div class="form-box">
+        <form action="" method="">
+          <input name="user" type="text" placeholder="username">
+          <input type="password" placeholder="password">
+          <button class="btn btn-info btn-block login" type="submit">Login</button>
+        </form>
+      </div>
+    </div>
+    </div>
+    <div class="col-md-4" style="margin-top:10px;">
       <div class="panel panel-success">
         <div class="panel-heading">
           Acceptto Login Status
@@ -134,7 +151,7 @@
           </div>
       </div>
     </div>
-      <div class="panel panel-danger">
+      <div class="panel panel-danger " >
         <div class="panel-heading">
           Google Login Status
         </div>
