--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -110,8 +110,9 @@
       <div class="form-box">
         <form action="" method="">
           <input name="user" type="text" placeholder="username">
-          <input type="password" placeholder="password">
-          <button class="btn btn-info btn-block login" type="submit">Login</button>
+          <input type="password" placeholder="password  ">
+          <button class="btn btn-info btn-block login signin" type="submit">Sing In</button>
+          <button class="btn btn-danger btn-block signout" type="submit" style="display:none;" >Sing Out</button>
         </form>
       </div>
     </div>
