--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -111,8 +111,8 @@
         <form action="" method="">
           <input name="user" type="text" placeholder="username">
           <input type="password" placeholder="password  ">
-          <button class="btn btn-info btn-block login signin" type="submit">Sing In</button>
-          <button class="btn btn-danger btn-block signout" type="submit" style="display:none;" >Sing Out</button>
+          <button class="btn btn-info btn-block login signin" type="submit">Sign In</button>
+          <button class="btn btn-danger btn-block signout" type="submit" style="display:none;" >Sign Out</button>
         </form>
       </div>
     </div>
